src/snapshots/afrotd__parser__tests__rule_html_8.5.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            8.5.1 Wie erzielt
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Es ist ein Safety, wenn:
            </p>
            <ol type="a">
                <li>der Ball, ausgenommen durch einen unvollständigen
                Vorwärtspass, hinter einer Goalline im Aus dead wird oder im
                Besitz eines Spielers dead wird und sich der Ball in, über oder
                hinter der eigenen Goalline befindet oder durch die Regel dead
                wird und das Team, welches diese Goalline verteidigt, dafür
                verantwortlich ist, dass sich der Ball dort befindet (A.R.
                6.3.1.IV, A.R. 7.2.4.I, A.R. 8.5.1.I, 8.5.1.II, 8.5.1.IV und
                8.5.1.VI bis 8.5.1.VIII, A.R. 8.7.2.II und A.R. 9.4.1.VIII). Im
                Zweifel ist es ein Touchback, kein Safety.
                    <p>
                        <strong>Ausnahmen: Es ist kein Safety, wenn ein Spieler
                        zwischen seiner 5-Meterlinie und seiner
                        Goalline</strong>
                    </p>
                    <ol type="1">
                        <li>einen Pass oder einen Fumble abfängt oder einen
                        gegnerischen Fumble oder einen gegnerischen Rückpass
                        recovert oder einen gegnerischen Kick fängt oder
                        recovert und
                        </li>
                        <li>durch seinen eigenen Schwung in seine Endzone
                        getragen wird und
                        </li>
                        <li>der Ball hinter dieser Goalline bleibt und im
                        Besitz seines Teams für dead erklärt wird. Das
                        beinhaltet einen Fumble, der von der Endzone zuerst ins
                        Spielfeld und dann ins Aus geht (Regel 7.2.4.b.1). Sind
                        die Bedingungen 1 bis 3 erfüllt, gehört der Ball dem
                        Team des Spielers an dem Punkt, an dem der Spieler
                        Ballbesitz erlangt.
                        </li>
                    </ol>
                </li>
                <li>eine angenommene Strafe für ein Foul den Ball auf oder
                hinter der Goalline des verursachenden Teams belässt
                (Ausnahmen: Regel 3.1.3.g.3 und 8.3.4.a) (A.R. 8.5.1.III und
                A.R. 10.2.2.VI).
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.8.5.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
