src/snapshots/afrotd__parser__tests__rule_html_8.5.2.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            8.5.2 Kick nach einem Safety
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Wurde ein Safety erzielt, gehört der Ball dem Team, das den
                Safety verursacht hat, und dieses Team muss den Ball an dessen
                20-Meterlinie durch einen Free Kick auf oder zwischen den Hash
                Marks ins Spiel bringen. Der Free Kick kann ein Punt, Drop Kick
                oder Place Kick sein (Ausnahme: Regeln betreffend Try und
                Extraperioden).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.8.5.2"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
