src/snapshots/afrotd__parser__tests__rule_html_8.7.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            8.7.1 Verantwortlichkeit
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Das Team, das dafür verantwortlich ist, dass der Ball hinter
                einer Goalline im Aus ist oder im Besitz eines Spielers in,
                über oder hinter einer Goalline dead wird, ist das Team, dessen
                Spieler den Ball trägt oder dem Ball einen Antrieb verleiht,
                durch den der Ball in, über oder hinter die Goalline getrieben
                wird oder das dafür verantwortlich ist, dass sich ein freier
                Ball in, über oder hinter der Goalline befindet.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.8.7.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
