src/snapshots/afrotd__parser__tests__rule_html_8.7.2.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            8.7.2 Ursprünglicher Antrieb
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Der Antrieb, der dem Ball von einem Spieler durch einen
                Kick, Pass, Snap oder Fumble verliehen wird, ist für die
                Fortbewegung des Balles in jede Richtung verantwortlich. Das
                gilt auch dann, wenn der Ball abgefälscht oder zurückgetrieben
                wird, nachdem er den Boden, einen Schiedsrichter oder
                irgendeinen Spieler eines der Teams berührt hat (A.R.
                6.3.4.III, A.R. 8.5.1.II, 8.5.1.VI und 8.5.1.VIII und A.R.
                8.7.2.I bis 8.7.2.IV).
                </li>
                <li>Der ursprüngliche Antrieb, der dem Ball verliehen wurde,
                ist als verbraucht anzusehen und die Verantwortung für die
                Fortbewegung des Balles ist einem Spieler zuzuordnen, wenn:
                    <ol type="1">
                        <li>dieser Spieler einen Ball kickt, der sich nicht im
                        Besitz eines Spielers befindet oder einen freien Ball
                        schlägt, nachdem dieser den Boden berührt hat.
                        </li>
                        <li>der Ball zur Ruhe kommt und ein Spieler dem Ball
                        durch jeden Kontakt mit ihm, ausgenommen einer
                        erzwungenen Berührung (Regel 2.11.4.c), einen neuen
                        Antrieb gibt.
                        </li>
                    </ol>
                </li>
                <li>Ein freier Ball behält seinen ursprünglichen Status, wenn
                ihm ein neuer Antrieb verliehen wurde.
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.8.7.2"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
