src/snapshots/afrotd__parser__tests__rule_html_9.1.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            9.1.1 Schwere Fouls
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Vor dem Spiel, während des Spieles und zwischen den Perioden
                erfordern alle schweren Fouls (Regel 2.10.3) die
                Disqualifikation des Verursachers. Team B’s persönliche Fouls,
                die zur Disqualifikation führen, erfordern einen First Down,
                soweit dies nicht in Konflikt zu anderen Regeln steht.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.9.1.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
