src/snapshots/afrotd__parser__tests__rule_html_9.1.10.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            9.1.10 Chop Block
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Chop Blocks sind verboten (Regel 2.3.3) (A.R. 9.1.10.I bis
                9.1.10.V).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.9.1.10"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
