src/snapshots/afrotd__parser__tests__rule_html_9.1.12.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            9.1.12 Kontakt gegen einen Gegner, der nicht am Spielgeschehen
            teilnimmt
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Kein Spieler darf einen Receiver tackeln oder umreißen,
                wenn ein Vorwärtspass für diesen offensichtlich unerreichbar
                ist. Das ist ein persönliches Foul und keine Passbehinderung.
                </li>
                <li>Bevor oder nachdem der Ball dead wurde, darf sich kein
                Spieler mit seinem Körper gegen einen Gegner werfen oder in ihn
                hineinlaufen, wenn dieser offensichtlich nicht mehr am
                Spielgeschehen teilnimmt.
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.9.1.12"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
